Remove CSS rule that made selected text the same color as current line background

--- a/plugins/ace-editor/bear-ace-theme.css
+++ b/plugins/ace-editor/bear-ace-theme.css
@@ -66,8 +66,7 @@
     color: var(--solarized-blue);
 }
 
-.ace-solarized-dark .ace_marker-layer .ace_active-line,
-.ace-solarized-dark .ace_marker-layer .ace_selection {
+.ace-solarized-dark .ace_marker-layer .ace_active-line {
     background: var(--solarized-base04);
 }
 
